--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,14 @@ p {
    opacity:0.8;
   }
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .App-logo {
+    height: 50vmin;
+    pointer-events: none;
+  }
+}
+
+
+
