--- a/src/App.css
+++ b/src/App.css
@@ -33,28 +33,49 @@ p {
   font-family: ui-monospace;
 }
 
-
-
 @keyframes fade {
   0% {
-    opacity:0.3;
+    opacity: 0.3;
   }
-  50%{
-    opacity:1;
+  50% {
+    opacity: 1;
   }
   100% {
-   opacity:0.3;
+    opacity: 0.3;
   }
 }
 @keyframes altfade {
   0% {
-    opacity:0.8;
+    opacity: 0.8;
   }
-  50%{
-    opacity:0;
+  50% {
+    opacity: 0;
   }
   100% {
-   opacity:0.8;
+    opacity: 0.8;
+  }
+}
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
+  }
+}
+@-webkit-keyframes altfade {
+  0% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.8;
   }
 }
 
@@ -65,6 +86,3 @@ p {
     pointer-events: none;
   }
 }
-
-
-
